# teal-api-gen

./: .clangd  .gitignore  AcmeOSC1000SCOPE1.tl  CMakeLists.txt  LICENSE  Makefile  README.md  example_instrument.json  generate_tl.lua  vcpkg.json
cmake/: teal-api-gen-config.cmake.in
include/: generator.hpp
include/teal-api-gen/: convert.hpp  export.h
src/: cli.cpp  convert.cpp  generator.cpp  main.cpp
tests/: CMakeLists.txt  example_instrument.yml  test_generator.cpp
tests/test_utils/: MockLuaContext.cpp  MockLuaContext.hpp
